Fix the info icon mis align problem.

--- a/src/PortfolioPlanning/Components/Plan/DependencyPanel.scss
+++ b/src/PortfolioPlanning/Components/Plan/DependencyPanel.scss
@@ -41,6 +41,10 @@
             flex-shrink: 0;
         }
 
+        .info-icon {
+            vertical-align: middle;
+        }
+
         .item-text-and-progress {
             display: flex;
             flex-grow: 1;
